<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".Signup">

    <TextView
        android:layout_width="184dp"
        android:layout_height="72dp"
        android:fontFamily="@font/alatsi"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="517dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="654dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/alatsi"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="442dp"
        android:autofillHints="username"
        android:fontFamily="@font/alatsi"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="374dp"
        android:autofillHints="password"
        android:fontFamily="@font/alatsi"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="318dp"
        android:text="@string/new_acc"
        android:id="@+id/signup_btn"/>

</RelativeLayout>