<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="145dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="532dp"
        android:fontFamily="@font/alata"
        android:text="@string/log_in"
        android:textSize="43sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="213dp"
        android:fontFamily="@font/alatsi"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="473dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="310dp"
        android:fontFamily="@font/alatsi"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="401dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:id="@+id/password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="318dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/login"
        android:id="@+id/signin_btn"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="104dp"
        android:fontFamily="@font/alatsi"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="316dp"
        android:text="@string/sign_up"
        />


</RelativeLayout>